fixed default route

--- a/master/dhcp/data/dhcpd.conf
+++ b/master/dhcp/data/dhcpd.conf
@@ -4,10 +4,16 @@ subnet 192.168.177.0 netmask 255.255.255.0 {
 	option broadcast-address 192.168.177.255;
 	option domain-name-servers 192.168.177.1, 8.8.8.8, 8.8.4.4;
 	option domain-name "kuber.home";
-	option routers 192.168.177.1;
+	option domain-search "kuber.home";
 	default-lease-time 7200;
 	max-lease-time 480000;
 
+}
+
+host control1 {
+	hardware ethernet 08:00:27:21:ee:3f;
+	fixed-address 192.168.177.3;
+	option subnet-mask 255.255.255.0;
 }
 
 host worker1 {
@@ -15,3 +21,4 @@ host worker1 {
 	fixed-address 192.168.177.2;
 	option subnet-mask 255.255.255.0;
 }
+
