--- a/master/dns_bind/config/named.conf
+++ b/master/dns_bind/config/named.conf
@@ -4,12 +4,14 @@
 # };
 
 options {
+  dnssec-validation  yes;
+
   forwarders {
     8.8.8.8;
-    1.1.1.1;
-    1.0.0.1;
+    8.8.4.4;
   };
- #  allow-query { internal; };
+
+  allow-query { any; };
 };
 
 zone "kuber.home" IN {
