add kubespray cfg

--- a/master/kubespray/inventory.ini
+++ b/master/kubespray/inventory.ini
@@ -1,6 +1,6 @@
 [all]
-worker1
-control1
+worker1 ansible_host=192.168.177.2 ip=192.168.177.2
+control1 ansible_host=192.168.177.3 ip=192.168.177.3
 
 [all:vars]
 ansible_connection=ssh
