--- a/vagrant_dynamic/Vagrantfile
+++ b/vagrant_dynamic/Vagrantfile
@@ -59,10 +59,14 @@ Vagrant.configure("2") do |config|
       # additional safety
       n.vm.synced_folder ".", "/vagrant", SharedFoldersEnableSymlinksCreate: false
 
-      n.vm.provider "virtualbox" do |v, override|
-        v.name = vm_name
-        v.memory = 2048
-        v.cpus = 2
+      n.vm.provider :virtualbox do |vb, override|
+        vb.name = vm_name
+        vb.memory = 2048
+        vb.cpus = 2
+        vb.gui = false
+        vb.linked_clone = true
+        vb.customize ["modifyvm", :id, "--vram", "8"] # ubuntu defaults to 256 MB which is a waste of precious RAM
+        vb.customize ["modifyvm", :id, "--audio", "none"]
       end
     end
   end
@@ -74,15 +78,19 @@ Vagrant.configure("2") do |config|
     master.vm.hostname = "master"
     master.vm.network "private_network", ip: "192.168.177.1", virtualbox__intnet: "kuber_internal"
 
-    master.vm.provider :virtualbox do |v, override|
-      v.name = "master"
-      v.memory = 1024
-      v.cpus = 1
+    master.vm.provider :virtualbox do |vb, override|
+      vb.name = "master"
+      vb.memory = 2048
+      vb.cpus = 2
+      vb.gui = false
+      vb.linked_clone = true
+      vb.customize ["modifyvm", :id, "--vram", "8"] # ubuntu defaults to 256 MB which is a waste of precious RAM
+      vb.customize ["modifyvm", :id, "--audio", "none"]
     end
 
     master.vm.synced_folder ".", "/vagrant", SharedFoldersEnableSymlinksCreate: false
 
-    # master.vm.provision "shell", inline: $script, privileged: false
+    master.vm.provision "shell", inline: $script, privileged: false
 
     host_vars = {}
     # serialize to json
