--- a/vagrant_dynamic/Vagrantfile
+++ b/vagrant_dynamic/Vagrantfile
@@ -54,6 +54,8 @@ Vagrant.configure("2") do |config|
     ip = node[:ip]
 
     config.vm.define vm_name do |n|
+      config.vm.provider "libvirt"
+
       n.vm.box = "generic/ubuntu2004"
       n.disksize.size = "20GB"
 
@@ -72,10 +74,24 @@ Vagrant.configure("2") do |config|
         vb.customize ["modifyvm", :id, "--vram", "8"] # ubuntu defaults to 256 MB which is a waste of precious RAM
         vb.customize ["modifyvm", :id, "--audio", "none"]
       end
+
+      n.vm.provider :libvirt do |lv|
+        lv.cpu_mode = "host-model"
+        lv.memory = 2048
+        lv.cpus = 2
+        lv.default_prefix = 'kubespray'
+        # Fix kernel panic on fedora 28
+        if $os == "fedora"
+          lv.cpu_mode = "host-passthrough"
+        end
+      end
+
     end
   end
 
   config.vm.define "master" do |master|
+    config.vm.provider "libvirt"
+
     master.vm.box = "generic/ubuntu2004"
     master.disksize.size = "20GB"
 
@@ -90,6 +106,17 @@ Vagrant.configure("2") do |config|
       vb.linked_clone = true
       vb.customize ["modifyvm", :id, "--vram", "8"] # ubuntu defaults to 256 MB which is a waste of precious RAM
       vb.customize ["modifyvm", :id, "--audio", "none"]
+    end
+
+    master.vm.provider :libvirt do |lv|
+      lv.cpu_mode = "host-model"
+      lv.memory = 2048
+      lv.cpus = 2
+      lv.default_prefix = 'kubespray'
+      # Fix kernel panic on fedora 28
+      if $os == "fedora"
+          lv.cpu_mode = "host-passthrough"
+      end
     end
 
     master.vm.synced_folder ".", "/vagrant", SharedFoldersEnableSymlinksCreate: false
