--- a/vagrant_dynamic/control_nodes_postinstall.yaml
+++ b/vagrant_dynamic/control_nodes_postinstall.yaml
@@ -19,3 +19,15 @@
         state: present
         insertafter: EOF
         create: yes
+    
+    - name: Install required packages
+      apt:
+        pkg:
+          - bash-completion
+        state: latest
+
+    - name: add bash completion for kubectl
+      become: true
+      become_user: vagrant
+      shell: |
+        echo "source <(kubectl completion bash)" >> ~/.bashrc
